// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge Component Badge renders notification 1`] = `
<div>
  <span>
    <span
      class="gds-badge pill danger CLASSNAME"
    >
      BADGE
    </span>
  </span>
  <div>
    <div
      class="gds-tooltip bottom"
      style="left: -99999px; top: -99999px; opacity: 0;"
    >
      <div
        class="tooltip-arrow"
      />
      <div
        class="tooltip-label"
      >
        TOOLTIP
      </div>
    </div>
  </div>
</div>
`;

exports[`Badge Component Badge renders notification 2`] = `
<div>
  <span>
    <span
      class="gds-badge pill danger CLASSNAME"
    >
      <div />
    </span>
  </span>
  <div>
    <div
      class="gds-tooltip bottom"
      style="left: -99999px; top: -99999px; opacity: 0;"
    >
      <div
        class="tooltip-arrow"
      />
      <div
        class="tooltip-label"
      >
        TOOLTIP
      </div>
    </div>
  </div>
</div>
`;

exports[`Badge Component Badge without children 1`] = `<div />`;
